make ready for heu

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+body {
+  background-color: #01bd84;
+  color: #fff;
+  font-family: monospace;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  background-color: #fff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+textarea {
+  border-radius: 0.1rem 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tweet-card {
+  margin: 10px;
+  padding: 10px 40px;
+  border-radius: 0.8rem 3rem;
+  color: #fff;
+  background-color: rgb(0, 170, 113);
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
-.App-link {
-  color: #61dafb;
+.logout-btn {
+  color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-name-date {
+  font-size: 0.7rem;
 }
